# openclaw-expert-suite

./: .gitignore  LICENSE  README.md  pyproject.toml  system-architecture.canvas
HUMAN3.0发展评估师/: SOUL.md
agents/: coach.md  creator.md  critic.md  decision.md  executor.md  human3.md  methodology.md  naval.md  researcher.md  strategist.md  synthesizer.md  thinker.md  tiandao.md
coordinator/: SKILL.md
examples/: bio-sovereignty-debate.md
openclaw/: __init__.py  cli.py  expert.py  rules.py
openclaw_expert_suite.egg-info/: PKG-INFO  SOURCES.txt
skills/: multi-agent-experts-v2.md  multi-agent-experts-v3.md
tests/: test_cli.py  test_expert.py  test_rules.py
专栏作家/: SOUL.md
五步文案优化大师/: SOUL.md
人生炼金术/: SOUL.md
思维教练/: SOUL.md
方法论创造大师/: SOUL.md
深度文章写作/: SOUL.md
深度领域专家/: SOUL.md
纳瓦尔策略/: SOUL.md
高维决策模拟/: SOUL.md  call.sh
